@@ -154,9 +154,11 @@ c2
 
 	DW	c1,c2,c3
 
-.data2	udata 0x18
-	res 1
-d2	res 1
+.data2	idata 0x18
+	db 1
+d2	db $,3
+	dw $-1
+	dw c3
 
 .data0	udata 7
 p7	res 1
